@@ -27,13 +27,11 @@
 #include <libsexy/sexy-spell-entry.h>
 #include "preferences-page-spellcheck.h"
 #include "preferences-dialog.h"
-
-
-extern XChatGUI gui;
+#include "gui.h"
 
 enum
 {
-	COL_LANG_ACTIVATED,
+	COL_LANG_ACTIVATED = 0,
 	COL_LANG_NAME,
 	COL_LANG_CODE
 };
@@ -47,7 +45,7 @@ enabled_changed (GtkToggleButton *button, PreferencesSpellcheckPage *page)
 	client = gconf_client_get_default ();
 	enabled = gtk_toggle_button_get_active (button);
 	gconf_client_set_bool (client, "/apps/xchat/spellcheck/enabled", enabled, NULL);
-	
+
 	gtk_widget_set_sensitive (page->vbox_langs, enabled);
 
 	g_object_unref (client);
@@ -67,10 +65,10 @@ language_changed (GtkCellRendererToggle *toggle, gchar *pathstr, PreferencesSpel
 	result = TRUE;
 	path = gtk_tree_path_new_from_string (pathstr);
 	if (gtk_tree_model_get_iter (GTK_TREE_MODEL (page->spellcheck_store), &iter, path)) {
-		gtk_tree_model_get (GTK_TREE_MODEL (page->spellcheck_store), &iter,
-				    COL_LANG_CODE, &lang,
-		                    COL_LANG_ACTIVATED, &activated, -1);
-		
+	    gtk_tree_model_get (GTK_TREE_MODEL (page->spellcheck_store), &iter,
+	                        COL_LANG_CODE, &lang,
+	                        COL_LANG_ACTIVATED, &activated, -1);
+
 		if (activated) {
 			/* we want to deactive it */
 			sexy_spell_entry_deactivate_language (SEXY_SPELL_ENTRY (gui.text_entry), lang);
@@ -79,18 +77,18 @@ language_changed (GtkCellRendererToggle *toggle, gchar *pathstr, PreferencesSpel
 			/* we want to activate it */
 			result = sexy_spell_entry_activate_language (SEXY_SPELL_ENTRY (gui.text_entry), lang, &err);
 		}
-		
+
 		if (result) {
 			/* ok we can update the configuration */
 			/*gtk_list_store_set (page->spellcheck_store, &iter,
-					    COL_LANG_ACTIVATED, !activated,
-					    -1);
+			                    COL_LANG_ACTIVATED, !activated,
+			                    -1);
 			*/
 			client = gconf_client_get_default ();
 			languages = sexy_spell_entry_get_active_languages (SEXY_SPELL_ENTRY (gui.text_entry));
 			gconf_client_set_list (client, "/apps/xchat/spellcheck/languages",
-					       GCONF_VALUE_STRING, languages, NULL);
-			
+			                       GCONF_VALUE_STRING, languages, NULL);
+
 			if (languages == NULL)
 				/* No more languages selected: desactivate spellchecking */
 				gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (page->enable_spellcheck), FALSE);
@@ -128,7 +126,7 @@ gconf_languages_changed (GConfClient *client, guint cnxn_id, GConfEntry *entry, 
 	GError *err = NULL;
 	GSList *new_languages, *old_languages;
 
-	/* First we use the new languages list 
+	/* First we use the new languages list
 	 *
 	 * FIXME: This suck because it should be done in text-entry.c
 	 * see FIXME in that file for information about this problem.
@@ -139,29 +137,28 @@ gconf_languages_changed (GConfClient *client, guint cnxn_id, GConfEntry *entry, 
 		sexy_spell_entry_set_active_languages (SEXY_SPELL_ENTRY (gui.text_entry), new_languages, &err);
 
 	if (err) {
-		g_printerr (_("Error in spellchecking configuration: %s\n"), err->message);
+		g_printerr (_("Error in spell checking configuration: %s\n"), err->message);
 		g_error_free (err);
 
 		old_languages = sexy_spell_entry_get_active_languages (SEXY_SPELL_ENTRY (gui.text_entry));
 		if (old_languages != NULL) {
 			gconf_client_set_list (client, "/apps/xchat/spellcheck/languages",
-					       GCONF_VALUE_STRING, old_languages, NULL);
+			                       GCONF_VALUE_STRING, old_languages, NULL);
 			g_slist_foreach (old_languages, (GFunc) g_free, NULL);
 			g_slist_free (old_languages);
 		}
 	}
 	else {
 		/* Then we update the store */
-		gtk_tree_model_get_iter_first (GTK_TREE_MODEL (store), &iter);
-		do {
-			gtk_tree_model_get (GTK_TREE_MODEL (store), &iter,
-					    COL_LANG_CODE, &lang, -1);
-			active = sexy_spell_entry_language_is_active (SEXY_SPELL_ENTRY (gui.text_entry), lang);
+		if (gtk_tree_model_get_iter_first (GTK_TREE_MODEL (store), &iter)) {
+			do {
+				gtk_tree_model_get (GTK_TREE_MODEL (store), &iter,
+				                    COL_LANG_CODE, &lang, -1);
+				active = sexy_spell_entry_language_is_active (SEXY_SPELL_ENTRY (gui.text_entry), lang);
 
-			gtk_list_store_set (store, &iter,
-					    COL_LANG_ACTIVATED, !active
-					    -1);
-		} while (gtk_tree_model_iter_next (GTK_TREE_MODEL (store), &iter));
+				gtk_list_store_set (store, &iter, COL_LANG_ACTIVATED, !active -1);
+			} while (gtk_tree_model_iter_next (GTK_TREE_MODEL (store), &iter));
+		}
 	}
 
 
@@ -190,22 +187,22 @@ preferences_page_spellcheck_new (gpointer prefs_dialog, GladeXML *xml)
 	else
 		page->icon = gdk_pixbuf_new_from_file (XCHATSHAREDIR "/spellcheck.png", NULL);
 	gtk_list_store_append (p->page_store, &iter);
-	gtk_list_store_set (p->page_store, &iter, 0, page->icon, 1, _("Spellchecking"), 2, 7, -1);
+	gtk_list_store_set (p->page_store, &iter, 0, page->icon, 1, _("Spell checking"), 2, 7, -1);
 
 	/* spellcheck languages list */
 	page->spellcheck_store = gtk_list_store_new (3, G_TYPE_BOOLEAN, G_TYPE_STRING, G_TYPE_STRING);
 	gtk_tree_view_set_model (GTK_TREE_VIEW (page->spellcheck_list),
-				 GTK_TREE_MODEL (page->spellcheck_store));
-	
+	                         GTK_TREE_MODEL (page->spellcheck_store));
+
 	page->activated_renderer = gtk_cell_renderer_toggle_new ();
 	g_object_set (G_OBJECT (page->activated_renderer), "activatable", TRUE, NULL);
 	column = gtk_tree_view_column_new_with_attributes (_("Enable"), page->activated_renderer,
-							   _("active"), COL_LANG_ACTIVATED, NULL);
+	                                                   _("active"), COL_LANG_ACTIVATED, NULL);
 	gtk_tree_view_insert_column (GTK_TREE_VIEW (page->spellcheck_list), column, 0);
 
 	page->name_renderer = gtk_cell_renderer_text_new ();
 	column = gtk_tree_view_column_new_with_attributes (_("Language"), page->name_renderer, "text",
-						  COL_LANG_NAME, NULL);
+	                                                   COL_LANG_NAME, NULL);
 	gtk_tree_view_insert_column (GTK_TREE_VIEW (page->spellcheck_list), column, 1);
 
 	g_signal_connect (G_OBJECT (page->enable_spellcheck),   "toggled", G_CALLBACK (enabled_changed), page);
@@ -225,25 +222,25 @@ preferences_page_spellcheck_new (gpointer prefs_dialog, GladeXML *xml)
 
 		if (name) {
 			gtk_list_store_set (page->spellcheck_store, &iter,
-					    COL_LANG_NAME, name, 
-					    COL_LANG_ACTIVATED, active,
-					    COL_LANG_CODE, l->data,
-					    -1);
+			                    COL_LANG_NAME, name,
+			                    COL_LANG_ACTIVATED, active,
+			                    COL_LANG_CODE, l->data,
+			                    -1);
 			g_free (name);
 		}
 		else
 			gtk_list_store_set (page->spellcheck_store, &iter,
-					    COL_LANG_NAME, l->data, 
-					    COL_LANG_ACTIVATED, active,
-					    COL_LANG_CODE, l->data,
-					    -1);
+			                    COL_LANG_NAME, l->data,
+			                    COL_LANG_ACTIVATED, active,
+			                    COL_LANG_CODE, l->data,
+			                    -1);
 	}
 	g_slist_free (languages);
 
 	enabled = gconf_client_get_bool (p->gconf, "/apps/xchat/spellcheck/enabled", NULL);
 	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (page->enable_spellcheck), enabled);
 	gtk_widget_set_sensitive (page->vbox_langs, enabled);
-	
+
 	return page;
 }
 
